# wavecore

./: .gitignore  MANIFEST.in  README.md  app.py  diff_report.py  project.txt  pyproject.toml  setup.py
_unneeded/: test_wavcore.py
_unneeded/recorder_converter/: __init__.py  converter.py  recorder.py
_unneeded/recorder_converter/vdat_txt_converter/: _codec_cffi.c  build_codec.py  codec.py  vdat_to_txt.py
docs/: ARCHITECTURE.md  PERFORMANCE_GUIDE.md  PYPI_PUBLISHING_GUIDE.md  USER_MANUAL.md  VTXT_FORMAT_SPEC.md
recorder_converter/: __init__.py  converter.py  recorder.py
recorder_converter/vdat_txt_converter/: txt_to_vdat.py
recorder_converter/vdat_txt_converter/Release/: _codec_cffi.cp312-win_amd64.exp  _codec_cffi.cp312-win_amd64.lib
wavcore/: __init__.py  converter.py  recorder.py
wavcore/_codec/: __init__.py  _build_ffi.py  codec.py  codec_core.c
wavcore/_codec/Release/wavcore/_codec/: _codec_core.cp312-win_amd64.exp  _codec_core.cp312-win_amd64.lib
